--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -370,7 +370,7 @@
 
                   </div>
                     <hr>
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" id="submit">
                     Submit
                     </button>
                 </form>
