survey link fixed

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -24,7 +24,7 @@
                     <p class="lead text-center" id="pfont">Take this survey and find out who is your best friend! </p>
                     <hr class="my-4">
                     
-                    <a class="btn btn-primary btn-lg mx-auto" href="survey.html" role="button" id="btnfont"><i class="fas fa-clipboard-list"></i> &nbsp Take Survey</a>
+                    <a class="btn btn-primary btn-lg mx-auto" href="/survey" role="button" id="btnfont"><i class="fas fa-clipboard-list"></i> &nbsp Take Survey</a>
                     
             </div> 
 
