added api and github link

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -388,6 +388,11 @@
                 </div>
         </div>
     </div>
+    <div class="footer col-12 text-center">
+
+        <p><a href="/api/friend" target="_blank" style="text-decoration:none; color:black">API Friends Link</a> | <a href="https://github.com/BradFabian/friendFinder" target="_blank" style="text-decoration:none; color:black">GitHub Link</a></p>
+
+      </div>
     <script>
       
     // Chosen CSS
