--- a/app/public/home.html
+++ b/app/public/home.html
@@ -33,10 +33,11 @@
     
         </div>
     </div>
-    <div class="footer">
+    <div class="footer col-12 text-center">
 
-
-    </div>
+            <p><a href="/api/friend" target="_blank" style="text-decoration:none; color:black">API Friends Link</a> | <a href="https://github.com/BradFabian/friendFinder" target="_blank" style="text-decoration:none; color:black">GitHub Link</a></p>
+    
+          </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
