--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -417,9 +417,9 @@
       }
     };
 
-    for (var selector in config) {
+    /*for (var selector in config) {
       $(selector).chosen(config[selector]);
-    }
+    }*/
 
     // Capture the form inputs
     $("#submit").on("click", function(event) {
