working on jquery

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -12,10 +12,10 @@
   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
   crossorigin="anonymous"></script>
     
-    <script src="friend.js"></script>
+   <!-- <script src="friend.js"></script>
     <script src="server.js"></script>
     <script src="apiroutes.js"></script>
-    <script src="htmlroutes.js"></script>
+    <script src="htmlroutes.js"></script>-->
 </head>
 <body>
         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -417,9 +417,7 @@
       }
     };
 
-    /*for (var selector in config) {
-      $(selector).chosen(config[selector]);
-    }*/
+   
 
     // Capture the form inputs
     $("#submit").on("click", function(event) {
