--- a/app/public/home.html
+++ b/app/public/home.html
@@ -13,10 +13,10 @@
   src="https://code.jquery.com/jquery-3.3.1.js"
   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
   crossorigin="anonymous"></script>
-    <script src="friend.js"></script>
+    <!--<script src="friend.js"></script>
     <script src="server.js"></script>
     <script src="apiroutes.js"></script>
-    <script src="htmlroutes.js"></script>
+    <script src="htmlroutes.js"></script>-->
 </head>
 <body>
     <div class="container"> 
