--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -27,12 +27,12 @@
         <br>
         <div class="jumbotron jumbotron-fluid text-center mdb-color lighten-2 white-text z-depth-2">
             <h1>
-                <i class="fas fa-user-friends" aria-hidden="true"></i> Survey Questions</h1>
+                 Survey Questions</h1>
                 <div>
                     <a href="/">
-                        <button type="button" class="btn btn-outline-white btn">
+                        <button type="button" class="btn btn-primary btn-lg mx-auto">
                             <h4>
-                                <span class="far fa-arrow-alt-circle-left"></span> Go to Home</h4>
+                                 Go to Home</h4>
                         </button>
                     </a>
                 </div>
