--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -6,7 +6,7 @@
     <title>FriendFinder</title>
 
     <!-- Latest compiled and minified CSS & JS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
@@ -25,17 +25,10 @@
 
     <div class="container">
         <br>
-        <div class="jumbotron jumbotron-fluid text-center mdb-color lighten-2 white-text z-depth-2">
+        <div class="jumbotron justify-center text-center col-12">
             <h1>
                  Survey Questions</h1>
-                <div>
-                    <a href="/">
-                        <button type="button" class="btn btn-primary btn-lg mx-auto">
-                            <h4>
-                                 Go to Home</h4>
-                        </button>
-                    </a>
-                </div>
+                 <a class="btn btn-primary btn-lg mx-auto" href="/" role="button" id="btnfont"> Go Home</a>
                 
         </div>
             <hr>
