--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -44,8 +44,8 @@
         <hr>
 
         <h3>
-            <br><strong class="d-block bg-info text-white shadow p-3 mb-5 bg-white rounded">&nbsp;
-                <i class="far fa-question-circle fa-xs">&nbsp;</i>Question 1</strong>
+            <br><strong class="d-block bg-primary text-white shadow p-3 mb-5 bg-white rounded">&nbsp;
+                Question 1</strong>
         </h3>
         <p2><b>Your mind is always buzzing with unexplored ideas and plans.</b></p2><br>
         <select data-placeholder="" class="chosen-select" id="q1">
@@ -58,8 +58,8 @@
         </select>
         
         <h3>
-            <br><strong class="d-block bg-info text-white shadow p-3 mb-5 bg-white rounded">&nbsp;
-            <i class="far fa-question-circle fa-xs">&nbsp;</i>Question 2</strong>
+            <br><strong class="d-block bg-primary text-white shadow p-3 mb-5 bg-white rounded">&nbsp;
+            Question 2</strong>
         </h3>
         <p2><b>Generally speaking, you rely more on your experience than your imagination.</b></p2><br>
         <select data-placeholder="" class="chosen-select" id="q2">
@@ -73,8 +73,8 @@
 
 
         <h3>
-            <br><strong class="d-block bg-info text-white shadow p-3 mb-5 bg-white rounded">&nbsp;
-            <i class="far fa-question-circle fa-xs">&nbsp;</i>Question 3</strong>
+            <br><strong class="d-block bg-primary text-white shadow p-3 mb-5 bg-white rounded">&nbsp;
+            Question 3</strong>
         </h3>
         <p2><b>You find it easy to stay relaxed and focused even when there is some pressure.</b></p2><br>
         <select data-placeholder="" class="chosen-select" id="q3">
@@ -88,8 +88,8 @@
 
 
         <h3>
-        <br><strong class="d-block bg-info text-white shadow p-3 mb-5 bg-white rounded">&nbsp;
-        <i class="far fa-question-circle fa-xs">&nbsp;</i>Question 4</strong>
+        <br><strong class="d-block bg-primary text-white shadow p-3 mb-5 bg-white rounded">&nbsp;
+        Question 4</strong>
         </h3>
         <p2><b>You rarely do something just out of sheer curiosity.</b></p2><br>
         <select data-placeholder="" class="chosen-select" id="q4">
@@ -103,8 +103,8 @@
 
 
         <h3>
-            <br><strong class="d-block bg-info text-white shadow p-3 mb-5 bg-white rounded">&nbsp;
-            <i class="far fa-question-circle fa-xs">&nbsp;</i>Question 5</strong>
+            <br><strong class="d-block bg-primary text-white shadow p-3 mb-5 bg-white rounded">&nbsp;
+            Question 5</strong>
         </h3>
         <p2><b>People can rarely upset you.</b></p2><br>
         <select data-placeholder="" class="chosen-select" id="q5">
@@ -118,8 +118,8 @@
 
 
         <h3>
-        <br><strong class="d-block bg-info text-white shadow p-3 mb-5 bg-white rounded">&nbsp;
-        <i class="far fa-question-circle fa-xs">&nbsp;</i>Question 6</strong>
+        <br><strong class="d-block bg-primary text-white shadow p-3 mb-5 bg-white rounded">&nbsp;
+        Question 6</strong>
         </h3>
         <p2><b>It is often difficult for you to relate to other people’s feelings.</b></p2><br>
         <select data-placeholder="" class="chosen-select" id="q6">
@@ -133,8 +133,8 @@
 
 
         <h3>
-            <br><strong class="d-block bg-info text-white shadow p-3 mb-5 bg-white rounded">&nbsp;
-            <i class="far fa-question-circle fa-xs">&nbsp;</i>Question 7</strong>
+            <br><strong class="d-block bg-primary text-white shadow p-3 mb-5 bg-white rounded">&nbsp;
+            Question 7</strong>
         </h3>
         <p2><b>In a discussion, truth should be more important than people’s sensitivities.</b></p2><br>
         <select data-placeholder="" class="chosen-select" id="q7">
@@ -147,8 +147,8 @@
         </select>
 
         <h3>
-            <br><strong class="d-block bg-info text-white shadow p-3 mb-5 bg-white rounded">&nbsp;
-            <i class="far fa-question-circle fa-xs">&nbsp;</i>Question 8</strong>
+            <br><strong class="d-block bg-primary text-white shadow p-3 mb-5 bg-white rounded">&nbsp;
+            Question 8</strong>
         </h3>
         <p2><b>You rarely get carried away by fantasies and ideas.</b></p2><br>
         <select data-placeholder="" class="chosen-select" id="q8">
@@ -161,8 +161,8 @@
         </select>
 
         <h3>
-            <br><strong class="d-block bg-info text-white shadow p-3 mb-5 bg-white rounded">&nbsp;
-            <i class="far fa-question-circle fa-xs">&nbsp;</i>Question 9</strong>
+            <br><strong class="d-block bg-primary text-white shadow p-3 mb-5 bg-white rounded">&nbsp;
+            Question 9</strong>
         </h3>
         <p2><b>You think that everyone’s views should be respected regardless of whether they are supported by facts or not.</b></p2><br>
         <select data-placeholder="" class="chosen-select" id="q9">
@@ -175,8 +175,8 @@
         </select>
 
         <h3>
-            <br><strong class="d-block bg-info text-white shadow p-3 mb-5 bg-white rounded">&nbsp;
-            <i class="far fa-question-circle fa-xs">&nbsp;</i>Question 10</strong>
+            <br><strong class="d-block bg-primary text-white shadow p-3 mb-5 bg-white rounded">&nbsp;
+            Question 10</strong>
         </h3>
         <p2><b>You feel more energetic after spending time with a group of people.</b></p2><br>
         <select data-placeholder="" class="chosen-select" id="q10">
@@ -191,7 +191,7 @@
         <br>
 
         <!-- Submit Button -->
-        <button type="submit" class="btn btn-info btn-lg btn-block shadow p-3 mb-5 bg-white rounded" id="submit">
+        <button type="submit" class="btn bg-primary btn-lg btn-block shadow p-3 mb-5 bg-white rounded" id="submit">
             <i class="fa fa-check-circle" aria-hidden="true"></i>Submit</button>
 
         <hr>
