--- a/app/public/home.html
+++ b/app/public/home.html
@@ -21,11 +21,11 @@
 <body>
     <div class="container"> 
      <div class="row">
-            <div class="jumbotron justify-center text-center col-12" id="splashPage">
+            <div class="jumbotron justify-center text-primary text-center col-12" style=" background-size: 100% auto; background-image: url(https://ak0.picdn.net/shutterstock/videos/3989350/thumb/3.jpg)" id="splashPage">
                     <h1 class="display-4 text-center" id="h1font"> <i class="fas fa-users"></i>
             
-                        &nbsp Friend Finder</h1>
-                    <p class="lead text-center" id="pfont">Take this survey and find out who is your best friend! </p>
+                        &nbsp <b>Friend Finder</b></h1>
+                    <p class="lead text-center" id="pfont"><strong><b>Take this survey and find out who is your best friend!</b></strong> </p>
                     <hr class="my-4">
                     
                     <a class="btn btn-primary btn-lg mx-auto" href="/survey" role="button" id="btnfont"><i class="fas fa-clipboard-list"></i> &nbsp Take Survey</a>
