modal button fix

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -220,7 +220,7 @@
                     <img id="match-img" src="" alt="">
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
 
